# packages/backend/src/tasche/api/v1/router.py
@@ -2,7 +2,7 @@
 
 from fastapi import APIRouter
 
-from tasche.api.v1 import auth, dashboard, goals, records, tasks, test_auth, users, weeks
+from tasche.api.v1 import auth, dashboard, goals, records, tasks, users, weeks
 
 api_router = APIRouter()
 
@@ -13,4 +13,3 @@ api_router.include_router(weeks.router, prefix="/weeks", tags=["週"])
 api_router.include_router(goals.router, prefix="/weeks/current/goals", tags=["目標"])
 api_router.include_router(records.router, prefix="/weeks/current/records", tags=["実績"])
 api_router.include_router(dashboard.router, prefix="/dashboard", tags=["ダッシュボード"])
-api_router.include_router(test_auth.router, prefix="/test-auth", tags=["テスト認証"])
